--- a/mb/account-types/account-types.html
+++ b/mb/account-types/account-types.html
@@ -63,58 +63,60 @@
   </header>
   <main>
     <h1 class="f_h">Типы счетов</h1>
-    <div class="plan_types">
-      <div class="silver">
-        <p class="ft_h">Silver</p>
-        <p class="prices"><b>500$</b></p>
-        <ul class="pros_list">
-          <li>Полный доступ к возможностям платформы</li>
-          <li>Более 100 активов</li>
-          <li>Доступ к криптоюирже</li>
-          <li>Обучающие курсы</li>
-          <li>Алгоритмические сигналы на месяц</li>
-          <li>Доступ к аналитике</li>
-          <li>1 безрисковая сделка</li>
-          <li>Вывод средств без комиссий</li>
-          <li>6 месяцев</li>
-          <li>Обработка заявки на вывод в течении 3 дней</li>
-        </ul>
-        <button class="plans_button_one" type="button" name="button">ОТКРЫТЬ</button>
-      </div>
-      <div class="gold">
-        <p class="s_h">Gold</p>
-        <p class="prices"><b>10000$</b></p>
-        <ul class="pros_list">
-          <li>Полный доступ к возможностям платформы</li>
-          <li>Более 100 активов</li>
-          <li>Полный Доступ к криптобирже</li>
-          <li>Обучающие видеокурсы и вебинары</li>
-          <li>Алгоритмические и крипто-сигналы</li>
-          <li>Доступ к аналитике</li>
-          <li>Торговля в паре с профессиональным трейдером</li>
-          <li>3 безрисковые сделки</li>
-          <li>Готовые решения по сделкам от профессиональных<br>трейдеров</li>
-          <li>Бизнес-план на 12 месяцев</li>
-          <li>Вывод без комиссии</li>
-          <li>Обработка заявки на вывод в течении 2 дней</li>
-        </ul>
-        <button class="plans_button_two" type="button" name="button">ОТКРЫТЬ</button>
-      </div>
-      <div class="platinum">
-        <p class="ft_h">Platinum</p>
-        <p class="prices"><b>500$</b></p>
-        <ul class="pros_list">
-          <li>Полный доступ к возможностям платформы</li>
-          <li>Все крипто-активы</li>
-          <li>Ежедневная аналитика</li>
-          <li>Готовый торговый портфель каждый месяц</li>
-          <li>Индивидуальные модели инвестирования</li>
-          <li>Связь 24/7</li>
-          <li>Вывод средств моментальный</li>
-          <li>Вывод без комиссий</li>
-          <li>Платиновая именная карта Master Binary<br>класса Infinite и World Signia</li>
-        </ul>
-        <button class="plans_button_one" type="button" name="button">ОТКРЫТЬ</button>
+    <div class="container  container--big">
+      <div class="plan_types">
+        <div class="silver">
+          <p class="ft_h">Silver</p>
+          <p class="prices"><b>500$</b></p>
+          <ul class="pros_list">
+            <li>Полный доступ к возможностям платформы</li>
+            <li>Более 100 активов</li>
+            <li>Доступ к криптоюирже</li>
+            <li>Обучающие курсы</li>
+            <li>Алгоритмические сигналы на месяц</li>
+            <li>Доступ к аналитике</li>
+            <li>1 безрисковая сделка</li>
+            <li>Вывод средств без комиссий</li>
+            <li>6 месяцев</li>
+            <li>Обработка заявки на вывод в течении 3 дней</li>
+          </ul>
+          <button class="plans_button_one" type="button" name="button">ОТКРЫТЬ</button>
+        </div>
+        <div class="gold">
+          <p class="s_h">Gold</p>
+          <p class="prices"><b>10000$</b></p>
+          <ul class="pros_list">
+            <li>Полный доступ к возможностям платформы</li>
+            <li>Более 100 активов</li>
+            <li>Полный Доступ к криптобирже</li>
+            <li>Обучающие видеокурсы и вебинары</li>
+            <li>Алгоритмические и крипто-сигналы</li>
+            <li>Доступ к аналитике</li>
+            <li>Торговля в паре с профессиональным трейдером</li>
+            <li>3 безрисковые сделки</li>
+            <li>Готовые решения по сделкам от профессиональных<br>трейдеров</li>
+            <li>Бизнес-план на 12 месяцев</li>
+            <li>Вывод без комиссии</li>
+            <li>Обработка заявки на вывод в течении 2 дней</li>
+          </ul>
+          <button class="plans_button_two" type="button" name="button">ОТКРЫТЬ</button>
+        </div>
+        <div class="platinum">
+          <p class="ft_h">Platinum</p>
+          <p class="prices"><b>500$</b></p>
+          <ul class="pros_list">
+            <li>Полный доступ к возможностям платформы</li>
+            <li>Все крипто-активы</li>
+            <li>Ежедневная аналитика</li>
+            <li>Готовый торговый портфель каждый месяц</li>
+            <li>Индивидуальные модели инвестирования</li>
+            <li>Связь 24/7</li>
+            <li>Вывод средств моментальный</li>
+            <li>Вывод без комиссий</li>
+            <li>Платиновая именная карта Master Binary<br>класса Infinite и World Signia</li>
+          </ul>
+          <button class="plans_button_one" type="button" name="button">ОТКРЫТЬ</button>
+        </div>
       </div>
     </div>
   </main>
