--- a/mb/index.html
+++ b/mb/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
       </div> 
-      <div class="nav__container  nav--closed">
+      <div class="nav__container  nav--closed  nav--index">
         <ul>
           <li><a href="#">Главная</a></li>
           <li><a href="#">Типы счетов</a></li>
