--- a/mb/contact-us/contact-us.html
+++ b/mb/contact-us/contact-us.html
@@ -69,7 +69,7 @@
       </ul>
     </div>
   </section>
-  <main>
+  <!-- <main> -->
     <section class="contact">
     <div class="container">
       <h1>Свяжитесь с нами</h1>
@@ -104,7 +104,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7559.13880610492!2d-61.22873344836196!3d13.157370948728065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c475150d7889919%3A0xec14007759a547d6!2sGriffith+Corporate+Centre!5e0!3m2!1sru!2sua!4v1522939623712" width="100%" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     </section>
-  </main>
+  <!-- </main> -->
   <footer class="footer">
     <div class="container">
       <div class="footer__payment">
