--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -6,6 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Forex24 Global</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#2f2861">
+  <meta name="msapplication-TileColor" content="#2f2861">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <meta name="theme-color" content="#5a21ed">
 </head>
 <body>
   <section class="title">
@@ -14,10 +25,13 @@
         <div class="header__flex">
           <img class="header__logo" src="img/logo.svg" alt="Forex24 Global">
           <ul class="header__user">
-            <li><a href="#">Open account</a></li>
+            <li><a class="header__open" href="#">Open account</a></li>
             <li><a href="#">Log in</a></li>
             <li>
-              
+              <select class="header__support">
+                <option>En</option>
+                <option>Ru</option>
+              </select>
             </li>
           </ul>
         </div>
