--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -171,9 +171,9 @@
         <p>Fast & Easy Account Opening</p>
         <b>Start Now!</b>
         <hr>
-        <input type="text" name="First Name" placeholder="First Name">
-        <input type="text" name="Last Name" placeholder="Last Name">
-        <select name="Country">
+        <input type="text" name="First Name" placeholder="First Name" required>
+        <input type="text" name="Last Name" placeholder="Last Name" required>
+        <select name="Country" required>
           <option hidden>Country</option>
           <option value="AF">Afghanistan</option>
         	<option value="AX">Åland Islands</option>
@@ -425,9 +425,9 @@
         	<option value="ZM">Zambia</option>
         	<option value="ZW">Zimbabwe</option>
         </select>
-        <input type="email" name="Email" placeholder="Email">
-        <input type="tel" name="Phone" placeholder="Phone">
-        <select name="Account">
+        <input type="email" name="Email" placeholder="Email" required>
+        <input type="tel" name="Phone" placeholder="Phone" required>
+        <select name="Account" required>
           <option hidden>Account Type</option>
           <option value="zulu">ZuluTrade</option>
           <option value="real">Real</option>
